test/arrays/errors/domainTypeAsDomainExpr.good
domainTypeAsDomainExpr.chpl:6: In function 'fn':
domainTypeAsDomainExpr.chpl:6: error: Domain expression was a type ('domain(1,int(64),false)') rather than a domain value or range list as expected
domainTypeAsDomainExpr.chpl:12: Function 'fn' instantiated as: fn(vec: [domain(1,int(64),false)] owned Child)
